assets/css/Style.css
/* ... */
@media(min-width: 300px)and (max-width: 1199px) {
	 h3 {
		font-size: calc(21px + (24 - 21) * ( 100vw - 300px) / (1200 - 300))
	}
}

@media(min-width: 1200px) {
	 h3 {
		font-size: 24px
	}
}

@media(min-width: 768px) {
	 h3 {
		margin: 60px 0 12px
	}
}

 h4 {
	font-size: 17px;
	font-family: var(--font-family-serif), system-ui, sans-serif;
	font-weight: 400;
	letter-spacing: .1em;
	line-height: 1.2;
	text-transform: uppercase;
	margin: 36px 0 5px;
	color: var(--c-text-strong)
}

@media(min-width: 300px)and (max-width: 1199px) {
	 h4 {
		font-size: calc(17px + (19 - 17) * ( 100vw - 300px) / (1200 - 300))
	}
}

@media(min-width: 1200px) {
	 h4 {
		font-size: 19px
	}
}

 h4 b,
 h4 strong {
	font-weight: 500
}

@media(min-width: 768px) {
	 h4 {
		margin: 60px 0 8px
	}
}

 h5 {
	font-size: 17px;
	font-family: var(--font-family-serif);
	font-size: 17px;
	line-height: 1.4;
	font-weight: 300;
	margin: 24px 0 5px;
	color: var(--c-text-muted)
}

@media(min-width: 300px)and (max-width: 1499px) {
	 h5 {
		font-size: calc(17px + (24 - 17) * ( 100vw - 300px) / (1500 - 300))
	}
}

@media(min-width: 1500px) {
	 h5 {
		font-size: 24px
	}
}

@media(min-width: 768px) {
	 h5 {
		margin: 60px 0 8px
	}
}

 h6 {
	font-size: 17px;
	font-family: var(--font-family-serif);
	font-size: 17px;
	line-height: 1.4;
	font-weight: 300;
	font-style: italic;
	margin: 24px 0 5px;
	color: var(--c-text-muted)
}

@media(min-width: 300px)and (max-width: 1499px) {
	 h6 {
		font-size: calc(17px + (24 - 17) * ( 100vw - 300px) / (1500 - 300))
	}
}

@media(min-width: 1500px) {
	 h6 {
		font-size: 24px
	}
}

@media(min-width: 768px) {
	 h6 {
		margin: 60px 0 8px
	}
}


a, p, ul, li, ol, table, span, blockquote {
    color: var(--c-text);
    font-family:   var(--secondary-font-family);
    font-size: inherit;
    line-height: 1.5em;
}

p, li {
	font-size: 18px;
	font-family: var(--font-family-sans);
	font-size: 18px;
	line-height: 1.4;
	font-weight: 300;
	padding-left: 8px;
	padding-right: 8px
}

p b,
p strong, li strong {
	font-weight: 500;
	FONT-FAMILY: var(--font-family-serif);
}

p em,
p i, li em, li i {
	font-style: italic
}

p p:not(:last-child) {
	margin-top: 0;
	margin-bottom: 1em
}

p a {
	box-shadow: inset 0 -1px var(--c-border);
	color: var(--c-text-link);
	cursor: pointer;
	transition: box-shadow .2s cubic-bezier(0.645, 0.045, 0.355, 1), color .2s cubic-bezier(0.645, 0.045, 0.355, 1)
}

p a:hover,
p a:focus {
	box-shadow: inset 0 -1px var(--c-text-strong);
	color: var(--c-text-strong)
}

@media(min-width: 300px)and (max-width: 1499px) {
	p, li {
		font-size: calc(20px + (24 - 20) * ( 100vw - 300px) / (1500 - 300))
	}
}

@media(min-width: 1500px) {
	p,li {
		font-size: 24px
	}
}

@media(min-width: 768px) {
	p,li {
		padding-left: .5vw;
		padding-right: .5vw
	}
}

p>:last-child {
	margin-bottom: 0
}


p a,
ul a,
li a,
td a,
th a,
h1 a,
h2 a,
h3 a,
h4 a,
h5 a,
h6 a,
span a,
div a,
ol a,
blockquote a,
cite a {
    font-size: inherit;
    font-family: inherit;
    color: inherit;
}

 ul {
	list-style: none;
	padding-left: 0
}

 ul:first-child {
	margin-top: 0
}

 ul:last-child {
	margin-bottom: 0
}

 ul li {
	margin-top: 10px;
	padding-left: 1em;
	position: relative
}

 ul li::before {
	position: absolute;
	top: .5em;
	left: 0;
	height: 6px;
	width: 6px;
	background-color: var(--c-accent);
	border-radius: 50%;
	content: "";
	position: absolute
}

@media(min-width: 1070px) {
	 ul li::before {
		height: 8px;
		width: 8px
	}
}

 ul ul li::before {
	background: transparent;
	border: 1px solid var(--c-accent)
}

 ul ul ul li::before {
	background-color: var(--c-accent)
}

 ul ul ul ul li::before {
	background: transparent;
	border: 1px solid var(--c-accent)
}

 ul ul ul ul ul li::before {
	background-color: var(--c-accent)
}

 ul ul ul ul ul ul li::before {
	background: transparent;
	border: 1px solid var(--c-accent)
}

 ol {
	counter-reset: counter;
	list-style: none;
	padding-left: 0
}

 ol:first-child {
	margin-top: 0
}

 ol:last-child {
	margin-bottom: 0
}

 ol>li {
	margin-top: 10px;
	padding-left: 1em;
	position: relative
}

 ol>li::before {
	position: absolute;
    top: -0.01em;
    left: 0;
    font-family: var(--font-family-serif),system-ui,sans-serif;
    font-size: 1.4;
    font-weight: 300;
    content: counter(counter);
    counter-increment: counter;
}

 ol li::before {
	color: var(--c-accent)
}

 ol ol li::before {
	content: counter(counter, lower-alpha) "."
}

 ol ol ol li::before {
	content: counter(counter, upper-roman) "."
}

 ol ol ol ol li::before {
	content: counter(counter) "."
}

 ol ol ol ol ol li::before {
	content: counter(counter, lower-alpha) "."
}

 ol ol ol ol ol ol li::before {
	content: counter(counter, upper-roman) "."
}

 blockquote {
	padding-top: 18px;
	padding-bottom: 18px;
	
}

@media(min-width: 600px) {
	 blockquote {
		padding-top: 24px
	}
}

@media(min-width: 1070px) {
	 blockquote {
		padding-top: 36px
	}
}

@media(min-width: 600px) {
	 blockquote {
		padding-bottom: 24px
	}
}

@media(min-width: 1070px) {
	 blockquote {
		padding-bottom: 36px
	}
}

 blockquote p {
	border-left: 5px solid var(--c-border-light);
	color: var(--c-text-muted);
	padding-left: 1em;
	font-style: italic;
}

 blockquote cite {
	font-family: var(--font-family-sans), system-ui, sans-serif;
	font-size: 16px;
	line-height: 1.4;
	font-weight: 400;
	color: var(--c-text-muted)
}

 blockquote cite strong {
	color: var(--c-text);
	font-weight: 500
}

 pre {
	margin-top: 18px;
	margin-bottom: 18px;
	background-color: var(--c-card-bg);
	color: var(--c-card-text);
	display: block;
	padding: 20px
}

@media(min-width: 600px) {
	 pre {
		margin-top: 24px
	}
}

@media(min-width: 1070px) {
	 pre {
		margin-top: 36px
	}
}

@media(min-width: 600px) {
	 pre {
		margin-bottom: 24px
	}
}

@media(min-width: 1070px) {
	 pre {
		margin-bottom: 36px
	}
}
/* ... */

